--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "convert-excel-to-json": "^1.6.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "read-excel-file": "^4.0.6",
+    "simple-excel-to-json": "^2.2.1",
+    "uuid": "^7.0.3",
+    "xlsx": "^0.15.6",
+    "xlsx-parse-json": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
