--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "hongheo:dev": "nodemon ./process/TuyPhuoc/HoNgheo.js"
+    "hongheo:json": "node ./process/TuyPhuoc/HoNgheoReader.js",
+    "hongheo:sql": "nodemon ./process/TuyPhuoc/HoNgheoConvert.js",
+    "hocanngheo:json": "node ./process/TuyPhuoc/HoCanNgheoReader.js",
+    "hocanngheo:sql": "nodemon ./process/TuyPhuoc/HoCanNgheoConvert.js"
   },
   "eslintConfig": {
     "extends": "react-app"
