--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
     "convert-excel-to-json": "^1.6.1",
     "moment": "^2.24.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-snap": "^1.23.0",
+    "react-snapshot": "^1.3.0",
     "read-excel-file": "^4.0.6",
     "simple-excel-to-json": "^2.2.1",
     "uuid": "^7.0.3",
@@ -22,10 +25,15 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "postbuild": "react-snap",
     "hongheo:json": "node ./process/TuyPhuoc/HoNgheoReader.js",
     "hongheo:sql": "nodemon ./process/TuyPhuoc/HoNgheoConvert.js",
     "hocanngheo:json": "node ./process/TuyPhuoc/HoCanNgheoReader.js",
-    "hocanngheo:sql": "nodemon ./process/TuyPhuoc/HoCanNgheoConvert.js"
+    "hocanngheo:sql": "nodemon ./process/TuyPhuoc/HoCanNgheoConvert.js",
+    "doanhnghiep:json": "node ./process/DoanhNghiep/DoanhNghiepReader.js",
+    "doanhnghiep:sql": "nodemon ./process/DoanhNghiep/DoanhNghiepConvert.js",
+    "nguoilaodong:json": "node ./process/DoanhNghiep/NguoiLaoDongReader.js",
+    "nguoilaodong:sql": "nodemon ./process/DoanhNghiep/NguoiLaoDongConvert.js"
   },
   "eslintConfig": {
     "extends": "react-app"
